recursion.cons.lessons.recursion.cons.Occurrence.scala.error
occurences:4: error: illegal start of simple pattern
		case a::b a==v => return 1+occurences(l.tail, v)
                               ^occurences:5: error: '=>' expected but ';' found.
		case a::b => return occurence(l.tail, v)
^