recursion.cons.lessons.recursion.cons.Occurrence.scala.code
def occurences(l:List[Int], v:Int): Int = {

	l match {
		case a::b a==v => return 1+occurences(l.tail, v)
		case a::b => return occurence(l.tail, v)
		case _ => return 0
	}
}